--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" type="text/css" href="RegisterStyle.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="LoginStyle.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="float-panel.js"></script>
 </head>
 
 <body>
@@ -30,8 +33,11 @@
     <img src="Images/WORK 02.png" alt="logo" class="logo">
     <div class="topnav">
       <a class="active" href="#home"> <i class="fa fa-fw fa-home"></i>Home</a>
-      <a onclick="document.getElementById('form1').style.display='block'"><i class="fa fa-fw fa-user"></i>Sign Up</a>
-      <a href="#contact-us"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+      <a onclick="document.getElementById('form1').style.display='block'" style="cursor: pointer"><i
+          class="fa fa-fw fa-user"></i>Sign Up</a>
+      <a onclick="document.getElementById('form2').style.display='block'" style="cursor: pointer"><i
+          class="fa fa-sign-in"></i> Log In</a>
+      <a href="#contact"><i class="fa fa-fw fa-envelope"></i> Contact</a>
       <a href="#about"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a>
     </div>
   </div>
@@ -65,9 +71,8 @@
           <div class="item">
             <img src="Images/jay-wennington.jpg" alt="">
             <div class="book-order">
-              <a href="FoodMenu.php" class="btn btn-primary">ORDER NOW</a>
+              <a href="#food-menu" class="btn btn-primary">ORDER NOW</a>
             </div>
-
           </div>
 
         </div>
@@ -82,11 +87,42 @@
       </div>
     </div>
   </div>
-  <div class="options-menu">
-    <img src="Images/Wada.jpg" alt="Tiffins" class="tiffins" style="width:100%">
-    <div class="middle">
-      <div class="text">Tiffins</div>
+  <div class="options-menu container-fluid" id="#food-menu">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="panel panel-default text-center ">
+          <div class="panel-heading">
+            <h2>Tiffins</h2>
+          </div>
+          <div class="panel-body">
+            <img src="Images/tiffins.jpg" alt="Tiffins" class="tiffins">
+          </div>
+          <div class="panel-footer">
+            <a href="#tiffins" class="btn btn-primary">Order Now</a>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="col-sm-6">
+        <div class="panel panel-default text-center ">
+          <div class="panel-heading">
+            <h2>Lunch</h2>
+          </div>
+          <div class="panel-body">
+            <img src="Images/lunch.jpg" alt="lunch" class="lunch">
+          </div>
+          <div class="panel-footer">
+            <a href="#lunch" class="btn btn-primary">Order Now</a>
+          </div>
+
+
+        </div>
+
+      </div>
     </div>
+
   </div>
 
 
@@ -158,7 +194,33 @@
       </div>
     </form>
   </div>
-  <div class="contact-us">
+
+  <div id="form2" class="modal">
+    <form class="modal-content animate" method="POST" action="Send_Data.php">
+      <h1>Login In</h1>
+      <span onclick="document.getElementById('form2').style.display='none'" class="close"
+        title="Close Modal">&times;</span>
+      <div class="input-icons">
+        <i class="fa fa-user icon"></i>
+        <input class="input-field" type="text" name="Username" placeholder="Enter your Name">
+      </div>
+      <div class="input-icons">
+        <i class="fa fa-key icon"></i>
+        <input class="input-field" type="password" name="password" placeholder="Enter password">
+      </div>
+      <label>
+        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+      </label><br>
+      <a href="#">Forgot password</a>
+      <div>
+        <input type="submit" value="Log In" class="btn btn-success btn-md " id="submit-btn">
+      </div>
+
+    </form>
+
+  </div>
+
+  <div class="contact-us" id="contact">
     <div class="container-fluid bg-grey">
       <h2 class="text-center">CONTACT</h2>
       <div class="row">
@@ -187,16 +249,24 @@
       </div>
     </div>
   </div>
+
   <script src="Script.js"></script>
+
   <script>
-    var modal = document.getElementById('form1');
+    var modal1 = document.getElementById('form1');
+    var modal2 = document.getElementById('form2');
 
     window.onclick = function (event) {
-      if (event.target == modal) {
+      if (event.target == modal1) {
+        modal.style.display = "none";
+      }
+      if (event.target == modal2) {
         modal.style.display = "none";
       }
     }
   </script>
+
+
 </body>
 
 </html>
